k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: product
spec:
  selector:
    app: product
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: counter
spec:
  selector:
    app: counter
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: barista
spec:
  selector:
    app: barista
  ports:
    - protocol: TCP
      port: 5003
      targetPort: 5003
---
apiVersion: v1
kind: Service
metadata:
  name: kitchen
spec:
  selector:
    app: kitchen
  ports:
    - protocol: TCP
      port: 5004
      targetPort: 5004
---
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: proxy
spec:
  selector:
    app: proxy
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
